# cursor_utils

./: .env.template  .gitignore  MANIFEST.in  README.rst  package-lock.json  pyproject.toml
.github/scripts/: update_version.py
.github/workflows/: commitlint.yml  lint.yml  pre-commit.yml  pypi.yml  release.yml  test.yml
cursor_utils/: main.py
cursor_utils/resources/rules/: rule.mdc
docs/source/: conf.py  index.rst
