[build-system]
requires = ["setuptools>=60.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cursor_utils"
version = "0.1.0"
authors = [
    { name = "sleeping-in-bed", email = "nyanyanyaworld@gmail.com" },
]
description = "cursor utils"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.2.0",
]

[dependency-groups]
dev = [
    "build",
    "twine",

    "coverage",
    "pytest",
    "tox",
    "mypy",
    "ruff",
    "pre-commit",

    "types-setuptools",
    "types-PyYAML",

    "sphinx",
    "sphinx-autobuild",
    "sphinx-intl",
    "furo",

    "jinja2",
    "python-dotenv",
    "rtoml",
    "beautifulsoup4",
    "click",
    "pyyaml"
]

[project.scripts]
cursor-utils = "cursor_utils.main:cli"

[tool.pypjt]
created-by = "1.14.0"

[tool.uv]
default-groups = "all"

[tool.setuptools]
packages = ["cursor_utils"]
include-package-data = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "tests"
]

[tool.ruff]
extend-exclude = [
    "cursor_utils/resources",
    "tests/resources",
    "tests/tmp",
    "containerdata",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
exclude = [
    "cursor_utils/resources",
    "tests/resources",
    "tests/tmp",
    "containerdata",
    "build",
    "dist",
]
